overlays/source/nginx/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: test-migration
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: registry.access.redhat.com/ubi9/nginx-122@sha256:52d41fe3f6b2cdecc1b195b64f74568f21bc1b8976a7ca5bb479013ba98a4beb
        name: nginx
        command:
        - nginx
        args:
        - "-g"
        - "daemon off;"
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 8443
          name: https
        resources:
          requests:
            cpu: 100m
            memory: "64Mi"
          limits:
            cpu: 200m
            memory: "256Mi"
