overlays/source/nginx/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: test-migration
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: nginx
    weight: null
  tls:
    termination: edge
